# libgemini

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  libgemini.code-workspace  makefile
.devcontainer/: devcontainer.json  docker-compose.yml
.githooks/: pre-commit
inc/: consts.h
src/: main.cpp
